Refactored PADP. Added vanilla model.